/**
 * Aervox｜思隅 @aervox/database — 日记与不可变调度周期实体表
 *
 * 规则依据：docs/reference/adr/ADR-011-diary-cycle-schedule-revision.md
 */
import { sqliteTable, text, integer, index, uniqueIndex } from "drizzle-orm/sqlite-core";
import { sql } from "drizzle-orm";
import { timestampColumns } from "./common.js";

/** 日记主表 */
export const diaries = sqliteTable(
  "diaries",
  {
    id: text("id").primaryKey(),
    localDate: text("local_date").notNull(), // YYYY-MM-DD 日期标签
    autoGenerated: integer("auto_generated").notNull().default(1),
    title: text("title").notNull(),
    content: text("content").notNull(),
    version: integer("version").notNull().default(1),
    // MVP+ 补齐（PRD §8）：关联周期、当前版本与可见状态
    cycleId: text("cycle_id"), // → diary_cycles.id
    currentVersionId: text("current_version_id"), // → diary_versions.id（应用层维护）
    status: text("status").notNull().default("draft"), // "draft" | "published" | "edited" | "archived"
    ...timestampColumns,
  },
  (table) => ({
    // SQLite 条件唯一索引：同一日期标签仅限一份 autoGenerated=1 的自动日记
    autoDiaryUniqueIdx: uniqueIndex("diaries_auto_unique_idx")
      .on(table.localDate)
      .where(sql`${table.autoGenerated} = 1`),
  }),
);

/** 日记周期不可变窗口表（DiaryCycle） */
export const diaryCycles = sqliteTable(
  "diary_cycles",
  {
    id: text("id").primaryKey(),
    scheduleEpochId: text("schedule_epoch_id").notNull(),
    localDate: text("local_date").notNull(),
    previousCutoffAt: text("previous_cutoff_at").notNull(),
    cutoffAt: text("cutoff_at").notNull(),
    status: text("status").notNull().default("Scheduled"), // Scheduled, Claimed, Generating, Validating, Published, Skipped, Failed, Cancelled
    scheduleVersion: integer("schedule_version").notNull().default(1),
    fencingToken: integer("fencing_token").notNull().default(0),
    diaryId: text("diary_id"),
    // MVP+ 补齐（PRD §8）：来源窗口边界、时区快照、素材缓冲关闭与游标提交
    sourceWindowStart: text("source_window_start"),
    sourceWindowEnd: text("source_window_end"),
    timezoneSnapshot: text("timezone_snapshot"),
    bufferClosedAt: text("buffer_closed_at"),
    cursorCommittedAt: text("cursor_committed_at"),
    ...timestampColumns,
  },
  (table) => ({

  }),
);

/** 日记计划不可变修订表 */
export const diaryScheduleRevisions = sqliteTable(
  "diary_schedule_revisions",
  {
    id: text("id").primaryKey(),
    scheduleId: text("schedule_id"), // → diary_schedules.id（应用层维护）
    revision: integer("revision").notNull(),
    enabled: integer("enabled").notNull().default(1),
    cronTime: text("cron_time").notNull(),
    timezone: text("timezone").notNull(),
    initialWindowStart: text("initial_window_start").notNull(),
    // MVP+ 补齐（PRD §8）：内容范围、免打扰时段、生效时间
    contentScopes: text("content_scopes", { mode: "json" }),
    quietHours: text("quiet_hours", { mode: "json" }),
    effectiveAt: text("effective_at"),
    createdAt: text("created_at").notNull().$defaultFn(() => new Date().toISOString()),
  },
  (table) => ({

  }),
);

/** 日记生成尝试表（带 lease 过期时间） */
export const diaryRunAttempts = sqliteTable(
  "diary_run_attempts",
  {
    id: text("id").primaryKey(),
    cycleId: text("cycle_id")
      .notNull()
      .references(() => diaryCycles.id, { onDelete: "cascade" }),
    scheduleVersion: integer("schedule_version").notNull(),
    workerId: text("worker_id").notNull(),
    attempt: integer("attempt").notNull().default(1),
    status: text("status").notNull(),
    leaseExpiresAt: text("lease_expires_at").notNull(),
    // MVP+ 补齐（PRD §8）：lease/fencing 阻止旧 Worker 覆盖新状态
    leaseId: text("lease_id"),
    fencingToken: integer("fencing_token").notNull().default(0),
    idempotencyKey: text("idempotency_key"),
    errorCode: text("error_code"),
    createdAt: text("created_at").notNull().$defaultFn(() => new Date().toISOString()),
  },
  (table) => ({
    cycleAttemptIdx: index("diary_attempts_cycle_idx").on(table.cycleId, table.attempt),
  }),
);

/** 日记计划主实体（MVP+；以 IANA 时区计算连续滚动窗口，修改计划产生不可变修订） */
export const diarySchedules = sqliteTable(
  "diary_schedules",
  {
    id: text("id").primaryKey(),
    enabled: integer("enabled").notNull().default(1),
    scheduleEpochId: text("schedule_epoch_id").notNull(),
    activeFrom: text("active_from").notNull(),
    disabledAt: text("disabled_at"),
    currentRevisionId: text("current_revision_id"), // → diary_schedule_revisions.id
    nextRunAt: text("next_run_at"),
    lastCutoffAt: text("last_cutoff_at"),
    initialWindowStart: text("initial_window_start").notNull(),
    cutoffRule: text("cutoff_rule").notNull(), // "daily" | "custom_cron"
    bufferMinutes: integer("buffer_minutes").notNull().default(0),
    contentScopes: text("content_scopes", { mode: "json" }),
    quietHours: text("quiet_hours", { mode: "json" }),
    version: integer("version").notNull().default(1),
    ...timestampColumns,
  },
  (table) => ({

  }),
);

/** 日记版本表（AI 生成/编辑/重写各自成为版本，不覆盖历史） */
export const diaryVersions = sqliteTable(
  "diary_versions",
  {
    id: text("id").primaryKey(),
    diaryId: text("diary_id")
      .notNull()
      .references(() => diaries.id, { onDelete: "cascade" }),
    perspective: text("perspective").notNull(), // "ai_generated" | "user_edit" | "rewrite"
    content: text("content").notNull(),
    modelRunId: text("model_run_id"),
    createdAt: text("created_at").notNull().$defaultFn(() => new Date().toISOString()),
    supersededAt: text("superseded_at"),
  },
  (table) => ({
    diaryIdx: index("diary_versions_diary_idx").on(table.diaryId),
  }),
);

/** 日记段落级来源/版本/权限快照（MVP+） */
export const diaryParagraphSources = sqliteTable(
  "diary_paragraph_sources",
  {
    id: text("id").primaryKey(),
    diaryVersionId: text("diary_version_id")
      .notNull()
      .references(() => diaryVersions.id, { onDelete: "cascade" }),
    paragraphIndex: integer("paragraph_index").notNull(),
    sourceArtifactId: text("source_artifact_id").notNull(), // → source_artifacts.id
    sourceRevisionId: text("source_revision_id").notNull(),
    permissionSnapshot: text("permission_snapshot", { mode: "json" }),
  },
  (table) => ({
    versionParaIdx: index("diary_paragraph_sources_version_para_idx").on(
      table.diaryVersionId,
      table.paragraphIndex,
    ),
  }),
);

/** 用途受限的滚动窗口素材缓冲（MVP+；不可被普通对话召回） */
export const diaryMaterialBuffers = sqliteTable(
  "diary_material_buffers",
  {
    id: text("id").primaryKey(),
    cycleId: text("cycle_id")
      .notNull()
      .references(() => diaryCycles.id, { onDelete: "cascade" }),
    sourceArtifactId: text("source_artifact_id").notNull(),
    sourceRevisionId: text("source_revision_id").notNull(),
    occurredAt: text("occurred_at").notNull(), // 业务窗口归属
    ingestedAt: text("ingested_at").notNull(), // 摄取时间
    ephemeralSnapshot: text("ephemeral_snapshot", { mode: "json" }), // 临时快照按规则自动清理
    permissionSnapshot: text("permission_snapshot", { mode: "json" }),
    expiresAt: text("expires_at").notNull(),
    status: text("status").notNull().default("buffered"), // "buffered" | "consumed" | "expired"
  },
  (table) => ({
    cycleIdx: index("diary_material_buffers_cycle_idx").on(table.cycleId),

  }),
);
